--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo"><YU/></div>
+            <div class="logo">&lt;YU/&gt;</div>
             <div class="menu-toggle" onclick="toggleMenu()">
                 <span></span>
                 <span></span>
