--- a/index.html
+++ b/index.html
@@ -1039,9 +1039,9 @@
                 <div class="project-card reveal">
                     <div class="project-image">📊</div>
                     <div class="project-content">
-                        <h3 class="project-title">Analytics Dashboard</h3>
+                        <h3 class="project-title">Food Delivery</h3>
                         <p class="project-description">
-                            Real-time analytics dashboard with interactive charts, data visualization, and customizable widgets for monitoring business metrics.
+                            Online Food ordering and restaurant ordering system website / Mobile app UI design concept. Screens for Restaurant Detail, Ordering, Cart, Checkout and Mobile views are included
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Angular</span>
@@ -1050,8 +1050,8 @@
                             <span class="tech-tag">API Integration</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">🔗 Live Demo</a>
-                            <a href="#" class="project-link">💻 GitHub</a>
+                            <a href="https://yousssef619.github.io/food-delivery/" class="project-link">🔗 Live Demo</a>
+                            <a href="https://github.com/yousssef619/food-delivery" class="project-link">💻 GitHub</a>
                         </div>
                     </div>
                 </div>
