--- a/index.html
+++ b/index.html
@@ -1050,8 +1050,8 @@
                             <span class="tech-tag">API Integration</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://yousssef619.github.io/food-delivery/" class="project-link">🔗 Live Demo</a>
-                            <a href="https://github.com/yousssef619/food-delivery" class="project-link">💻 GitHub</a>
+                            <a href="https://yousssef619.github.io/food-delivery/" class="project-link" target="_blank">🔗 Live Demo</a>
+                            <a href="https://github.com/yousssef619/food-delivery" class="project-link" target="_blank">💻 GitHub</a>
                         </div>
                     </div>
                 </div>
